--- a/AddHallitusInformation.ipynb
+++ b/AddHallitusInformation.ipynb
@@ -181,14 +181,14 @@
     "\n",
     "df_nimikkeet = []\n",
     "\n",
-    "filename = \"kansanedustajat_2015-2019.csv\"\n",
+    "filename = \"kaudet_joined.csv\"\n",
     "df = pd.read_csv(filename)\n",
     "i=0\n",
     "\n",
     "for index,row in df.iterrows():\n",
     "    firstname = row['firstname']\n",
     "    lastname = row['lastname']\n",
-    "    a = \" \"\n",
+    "    a = \"##\"\n",
     "    if 'position' in df.columns:\n",
     "        a = row['position'] \n",
     "    for k in nimikkeet_dict.keys():\n",
@@ -201,7 +201,7 @@
     "        \n",
     "df['position'] = df_nimikkeet\n",
     "df = df[['name','party', 'firstname', 'lastname', 'position']]\n",
-    "df.to_csv(filename)"
+    "#df.to_csv(filename)"
    ]
   },
   {
