--- a/CombineKaudet.ipynb
+++ b/CombineKaudet.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "file_list = ['kansanedustajat_1999-2003.csv', 'kansanedustajat_2003-2007.csv', 'kansanedustajat_2007-2011.csv', 'kansanedustajat_2011-2015.csv', 'kansanedustajat_2015-2019.csv']\n",
     "years = ['1999-2003', '2003-2007', '2007-2011', '2011-2015', '2015-2019']\n",
+    "start_dates = []\n",
+    "end_dates = []\n",
     "dfs = []\n",
     "\n",
     "i = 0\n",
@@ -294,7 +296,7 @@
    "source": [
     "joined = joined[['name','party', 'firstname', 'lastname', 'position','years']]\n",
     "joined['key'] = joined['firstname'] + \"_\" + joined['lastname']\n",
-    "joined.to_csv(\"kaudet_joined.csv\")"
+    "joined.to_csv(\"data/kaudet_joined.csv\")"
    ]
   },
   {
